--- a/example/blank.html
+++ b/example/blank.html
@@ -12,7 +12,7 @@
         <!-- boxicons: https://boxicons.com/usage https://boxicons.com https://github.com/atisawd/boxicons -->
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
         <link href="/basic.css" rel="stylesheet" />
-        <title>主页 | RS9C</title>
+        <title>blank | RS9C</title>
         <style></style>
     </head>
     <body>
@@ -38,29 +38,7 @@
             <!-- 置顶内容区 -->
             <div id="top"></div>
             <!-- 内容区卡片 -->
-            <div class="cards-container">
-                <div class="card">
-                    <div style="font-weight: 700">验证产品识别码<i class="bx bx-qr"></i>(RSPID)</div>
-                    <div style="margin-bottom: 5px">[旧版页面]</div>
-                    <button class="solid" onclick="window.open('/old/pid/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
-                </div>
-                <div class="card">
-                    <div style="font-weight: 700">测试页<i class="bx bx-bug"></i>/示例主页</div>
-                    <button class="solid" onclick="window.location.href='/example/index.html'">前往</button>
-                </div>
-                <div class="card">
-                    <div style="font-weight: 700">旧版主页</div>
-                    <div style="font-size: 12px; margin-bottom: 5px">如果你<s style="font-size: 12px"> 想看我曾经写过的屎 </s>是一个恋旧的人，可以点击前去主页面。</div>
-                    <button class="solid" onclick="window.open('/old/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
-                </div>
-                <div class="card">
-                    <b>页面问题反馈</b>
-                    <code style="font-weight: bold">feedback@rsdev.dpdns.org</code>
-                    <div class="button-container">
-                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈<i class="bx bx-envelope" style="color: #ffffff"></i></button>
-                    </div>
-                </div>
-            </div>
+            <div class="cards-container"></div>
             <!-- 底栏 -->
             <div class="bottom">
                 <hr class="divider" />
@@ -68,7 +46,7 @@
                 <a href="/quote.html" style="display: flex; justify-items: center; align-items: center; margin: 15px; text-decoration: none; color: var(--bottom-icon-color)"><i class="bx bxl-github" style="color: var(--bottom-icon-color)"></i>引用的开源项目</a>
             </div>
             <!-- 路径 -->
-            <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">主页</p>
+            <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">示例/空白页</p>
         </div>
     </body>
     <script src="/basic.js"></script>
@@ -105,7 +83,7 @@
 
         // 初始化
         window.addEventListener("DOMContentLoaded", () => {
-            showTopContent();
+            // showTopContent();
         });
     </script>
 </html>
