--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,17 @@
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
         <link href="/basic.css" rel="stylesheet" />
         <title>示例主页 | RS9C</title>
-        <style></style>
+        <style>
+            .card input[type="date"] {
+                height: 18px;
+                width: 150px;
+                background-color: #ffffff00;
+                margin: 0 2px;
+                border-radius: 5px;
+                border: var(--font-color) 1px solid;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <!-- 头部栏 -->
@@ -25,7 +35,7 @@
         <div class="header">
             <div class="logo">
                 RISINGSUN
-                <div id="today">今天什么日子</div>
+                <div id="today"></div>
             </div>
             <i class="bx bx-user-circle" id="user-button"></i>
             <i class="bx bx-search" id="search-button"></i>
@@ -40,7 +50,18 @@
             <!-- 内容区卡片 -->
             <div class="cards-container">
                 <div class="card">
-                    <div>我是一个<b>卡片</b></div>
+                    <div style="font-weight: 700">一键抛弃样式表</div>
+                    <div style="font-style: italic; font-size: 13px; margin-bottom: 5px">哇，这是什么功能？</div>
+                    <button class="hollow warn" onclick="removeCss()">尝逝一下</button>
+                </div>
+                <div class="card" style="font-weight: 700">
+                    时光机
+                    <div id="time-machine"></div>
+                    <div class="button-container">
+                        <button class="hollow" style="width: 80px" onclick="timeMachineLastDay()">上一天</button>
+                        <button class="solid" style="width: 60px" onclick="debug()">滚动</button>
+                        <button class="hollow" style="width: 80px" onclick="timeMachineNextDay()">下一天</button>
+                    </div>
                 </div>
                 <div class="card" style="font-weight: 700">
                     显示普通通知
@@ -95,9 +116,12 @@
     </body>
     <script src="/basic.js"></script>
     <script>
+        // 变量
+
+        // 函数
+
         /**
          * @description 显示置顶内容
-         * @param {String} topContent
          */
         async function showTopContent() {
             await sleep(1000);
@@ -109,7 +133,7 @@
             await sleep(500);
             document.getElementById("top").innerHTML = " ";
             await sleep(300);
-            const topContent = "正如你所见，这里什么都没有。";
+            const topContent = "这是一个用于开发测试的页面。";
             for (i in topContent) {
                 document.getElementById("top").innerHTML += topContent[i];
                 await sleep(150);
@@ -120,9 +144,71 @@
             return;
         }
 
+        /**
+         * @description 更新时光机显示日期
+         */
+        function timeMachineUpdateDate() {
+            const year = String(todayYear).padStart(4, "0");
+            const month = String(todayMonth).padStart(2, "0");
+            const date = String(todayDate).padStart(2, "0");
+            document.getElementById("time-machine").innerHTML = `今天是<input type="date" value="${year}-${month}-${date}" />`;
+            todayUpdate();
+        }
+        function timeMachineLastDay() {
+            today.setDate(todayDate - 1);
+            todayYear = today.getFullYear();
+            todayMonth = today.getMonth() + 1;
+            todayDate = today.getDate();
+            timeMachineUpdateDate();
+        }
+        function timeMachineNextDay() {
+            today.setDate(todayDate + 1);
+            todayYear = today.getFullYear();
+            todayMonth = today.getMonth() + 1;
+            todayDate = today.getDate();
+            timeMachineUpdateDate();
+        }
+
+        /**
+         * @description 移除basic.css
+         */
+        function removeCss() {
+            const css = document.querySelectorAll("link[href='/basic.css']");
+            css.forEach((link) => {
+                link.parentNode.removeChild(link);
+            });
+            showNotification("样式表：我免费了_(:з」∠)_");
+        }
+        /**
+         * @description 测试logo颜色
+         */
+        async function debug() {
+            await getToday();
+            for (const item in configToday) {
+                for (const i of configToday[item]) {
+                    document.documentElement.style.setProperty("--theme-color", i.color);
+                    document.getElementById("today").innerHTML = i.name;
+                    await sleep(800);
+                }
+            }
+            debug();
+        }
+
+        // 监听
+
+        document.getElementById("time-machine").addEventListener("input", (event) => {
+            const selectedDate = new Date(event.target.value);
+            todayYear = selectedDate.getFullYear();
+            todayMonth = selectedDate.getMonth() + 1;
+            todayDate = selectedDate.getDate();
+            today = selectedDate;
+            timeMachineUpdateDate();
+        });
+
+        // 初始化
         window.addEventListener("DOMContentLoaded", () => {
-            // 显示置顶内容
             showTopContent();
+            timeMachineUpdateDate();
         });
     </script>
 </html>
