--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <button class="solid" onclick="window.open('/old/pid/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
                 </div>
                 <div class="card">
-                    <div style="font-weight: 700">测试页<i class="bx bx-bug"></i>/示例主页</div>
+                    <div style="font-weight: 700; margin-bottom: 5px">测试页<i class="bx bx-bug"></i>/示例主页</div>
                     <button class="solid" onclick="window.location.href='/example/index.html'">前往</button>
                 </div>
                 <div class="card">
