--- a/quote.html
+++ b/quote.html
@@ -12,6 +12,6 @@
             <a href="https://github.com/atisawd/boxicons">图标：Boxicons (MIT)</a>
             <br />
         </div>
-        <a href="/example/index.html">(back)这里很生草，因为新页面还没有做完。。。</a>
+        <button onclick="window.history.back()">(back)这里很生草，因为新页面还没有做完。。。</button>
     </body>
 </html>
