--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="bottom">
                 <hr class="divider" />
                 <a href="#top" class="to-top"><i class="bx bx-arrow-to-top"></i>返回顶部</a>
-                <a href="/quote.html" style="display: flex; justify-items: center; align-items: center; margin: 15px; text-decoration: none; color: var(--bottom-icon-color)"><i class="bx bxl-github" style="color: var(--bottom-icon-color)"></i>引用的开源项目</a>
+                <a href="/quote.html" style="display: inline-flex; align-items: center; justify-items: center; margin: 15px; text-decoration: none; color: var(--bottom-icon-color)"><i class="bx bxl-github" style="color: var(--bottom-icon-color)"></i>引用的开源项目</a>
             </div>
             <!-- 路径 -->
             <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">主页</p>
