--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="card">
                     <div style="font-weight: 700">旧版主页</div>
-                    <div style="font-size: 12px; margin-bottom: 5px; display: flex">如果你<s style="font-size: 12px"> 想看我曾经写过的屎 </s>是一个恋旧的人，可以点击前去旧页面。</div>
+                    <div style="font-size: 12px; margin-bottom: 5px; display: block">如果你<s style="font-size: 12px"> 想看我曾经写过的屎 </s>是一个恋旧的人，可以点击前去旧页面。</div>
                     <button class="solid" onclick="window.open('/old/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
                 </div>
                 <div class="card">
