--- a/quote.html
+++ b/quote.html
@@ -1,17 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="/icon.png" type="image/png" />
+        <!-- iOS web app -->
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="apple-touch-icon-precomposed" href="/icon.png" sizes="1024x1024" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <!-- boxicons: https://boxicons.com/usage https://boxicons.com https://github.com/atisawd/boxicons -->
+        <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+        <link href="/basic.css" rel="stylesheet" />
         <title>引用的开源项目 | RS9C</title>
+        <style></style>
     </head>
     <body>
-        <div style="font-size: 22px; margin-bottom: 20px">
-            <a href="https://github.com/JetBrains/JetBrainsMono">字体：JetBrainsMono (OFL-1.1)</a>
-            <br />
-            <a href="https://github.com/atisawd/boxicons">图标：Boxicons (MIT)</a>
-            <br />
+        <!-- 头部栏 -->
+        <div class="menu-button">
+            <span class="menu-button-bar no-animation"></span>
+            <span class="menu-button-bar no-animation"></span>
+            <span class="menu-button-bar no-animation"></span>
         </div>
-        <button onclick="window.history.back()">(back)这里很生草，因为新页面还没有做完。。。</button>
+        <div class="header">
+            <div class="logo">
+                RISINGSUN
+                <div id="today"></div>
+            </div>
+            <i class="bx bx-user-circle" id="user-button"></i>
+            <i class="bx bx-search" id="search-button"></i>
+        </div>
+        <div id="menu" class="no-animation"></div>
+        <div id="wide-menu-back-area"></div>
+        <div id="notification-container"></div>
+        <div style="display: flex; flex-direction: column; flex: 1; overflow: scroll; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
+            <!-- 置顶内容区 -->
+            <div id="top"></div>
+            <!-- 内容区卡片 -->
+            <div class="cards-container">
+                <div class="card">
+                    <div style="font-weight: 700">JetBrains Mono</div>
+                    <div style="margin-bottom: 5px">OFL-1.1</div>
+                    <button class="solid" onclick="window.open('https://github.com/JetBrains/JetBrainsMono')"><i class="bx bxl-github"></i>Github</button>
+                </div>
+                <div class="card">
+                    <div style="font-weight: 700">Boxicons</div>
+                    <div style="margin-bottom: 5px">MIT</div>
+                    <button class="solid" onclick="window.open('https://github.com/atisawd/boxicons')"><i class="bx bxl-github"></i>Github</button>
+                </div>
+                <div class="card">
+                    <div style="font-weight: 700">中国农历数据库</div>
+                    <div style="margin-bottom: 5px">MIT</div>
+                    <button class="solid" onclick="window.open('https://github.com/hungtcs/traditional-chinese-calendar-database')"><i class="bx bxl-github"></i>Github</button>
+                </div>
+            </div>
+            <!-- 底栏 -->
+            <div class="bottom">
+                <hr class="divider" />
+                <a href="#top" class="to-top"><i class="bx bx-arrow-to-top"></i>返回顶部</a>
+                <a href="/quote.html" style="display: flex; justify-items: center; align-items: center; margin: 15px; text-decoration: none; color: var(--bottom-icon-color)"><i class="bx bxl-github" style="color: var(--bottom-icon-color)"></i>引用的开源项目</a>
+            </div>
+            <!-- 路径 -->
+            <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">引用的开源项目</p>
+        </div>
     </body>
+    <script src="/basic.js"></script>
+    <script>
+        // 变量
+
+        // 函数
+
+        /**
+         * @description 显示置顶内容
+         */
+        async function showTopContent() {
+            await sleep(1000);
+            document.getElementById("top").innerHTML = "_";
+            await sleep(500);
+            document.getElementById("top").innerHTML = " ";
+            await sleep(300);
+            const topContent = "引用的开源项目：";
+            for (i in topContent) {
+                document.getElementById("top").innerHTML += topContent[i];
+                await sleep(150);
+            }
+        }
+
+        // 监听
+
+        // 初始化
+        window.addEventListener("DOMContentLoaded", () => {
+            showTopContent();
+        });
+    </script>
 </html>
