--- a/quote.html
+++ b/quote.html
@@ -41,17 +41,17 @@
                 <div class="card">
                     <div style="font-weight: 700">JetBrains Mono</div>
                     <div style="margin-bottom: 5px">OFL-1.1</div>
-                    <button class="solid" onclick="window.open('https://github.com/JetBrains/JetBrainsMono')"><i class="bx bxl-github"></i>Github</button>
+                    <button class="solid" onclick="window.open('https://github.com/JetBrains/JetBrainsMono')"><i class="bx bxl-github" style="color: #ffffff"></i>Github</button>
                 </div>
                 <div class="card">
                     <div style="font-weight: 700">Boxicons</div>
                     <div style="margin-bottom: 5px">MIT</div>
-                    <button class="solid" onclick="window.open('https://github.com/atisawd/boxicons')"><i class="bx bxl-github"></i>Github</button>
+                    <button class="solid" onclick="window.open('https://github.com/atisawd/boxicons')"><i class="bx bxl-github" style="color: #ffffff"></i>Github</button>
                 </div>
                 <div class="card">
                     <div style="font-weight: 700">中国农历数据库</div>
                     <div style="margin-bottom: 5px">MIT</div>
-                    <button class="solid" onclick="window.open('https://github.com/hungtcs/traditional-chinese-calendar-database')"><i class="bx bxl-github"></i>Github</button>
+                    <button class="solid" onclick="window.open('https://github.com/hungtcs/traditional-chinese-calendar-database')"><i class="bx bxl-github" style="color: #ffffff"></i>Github</button>
                 </div>
             </div>
             <!-- 底栏 -->
