--- a/example/blank.html
+++ b/example/blank.html
@@ -49,7 +49,7 @@
             <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">示例/空白页</p>
         </div>
     </body>
-    <script src="/basic.js"></script>
+    <script src="/basic.min.js"></script>
     <script>
         // 变量
 
