--- a/example/index.html
+++ b/example/index.html
@@ -43,6 +43,7 @@
         <div id="menu" class="no-animation"></div>
         <div id="wide-menu-back-area"></div>
         <div id="notification-container"></div>
+        <div class="user-card"></div>
         <!-- 内容区 -->
         <div style="display: flex; flex-direction: column; flex: 1; overflow: scroll; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
             <!-- 置顶内容区 -->
@@ -114,7 +115,7 @@
             <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">示例/主页</p>
         </div>
     </body>
-    <script src="/basic.js"></script>
+    <script src="/basic.min.js"></script>
     <script>
         // 变量
 
