--- a/quote.html
+++ b/quote.html
@@ -64,7 +64,7 @@
             <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">引用的开源项目</p>
         </div>
     </body>
-    <script src="/basic.js"></script>
+    <script src="/basic.min.js"></script>
     <script>
         // 变量
 
