--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p style="margin: 0 auto 20px 10px; color: var(--bottom-icon-color)">主页</p>
         </div>
     </body>
-    <script src="/basic.js"></script>
+    <script src="/basic.min.js"></script>
     <script>
         // 变量
 
