--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="card">
                     <div style="font-weight: 700">验证产品识别码<i class="bx bx-qr"></i>(RSPID)</div>
                     <div style="margin-bottom: 5px">[旧版页面]</div>
-                    <button class="solid" onclick="window.open('/old/pid/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
+                    <button class="solid" onclick="window.open('/old/pid/index.html')">前往<i class="bx bxs-plane-take-off"></i></button>
                 </div>
                 <div class="card">
                     <div style="font-weight: 700; margin-bottom: 5px">测试页<i class="bx bx-bug"></i>/示例主页</div>
@@ -57,7 +57,7 @@
                     <b>页面问题反馈</b>
                     <code style="font-weight: bold">feedback@rsdev.dpdns.org</code>
                     <div class="button-container">
-                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈<i class="bx bx-envelope" style="color: #ffffff"></i></button>
+                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈<i class="bx bx-envelope"></i></button>
                     </div>
                 </div>
             </div>
