--- a/404.html
+++ b/404.html
@@ -17,18 +17,34 @@
     </head>
     <body></body>
     <script>
-        // let getContent = window.location.search.substring(window.location.search.lastIndexOf("=") + 1, window.location.search.length);
-        // if (getContent === undefined || getContent === null || getContent === "") {
-        //     alert('页面不见了╮(￣▽￣"")╭');
-        //     window.location.href = "/index.html";
-        // } else {
-        //     // 将getContent进行URL解码
-        //     getContent = decodeURIComponent(getContent);
-        //     alert(getContent);
-        //     // 回退至用户上一个页面
-        //     window.history.back();
-        // }
-        let getUrl = window.location.href;
-        alert(getUrl);
+        let path = window.location.pathname;
+        let url = window.location.href;
+
+        let getContentF = new URLSearchParams(window.location.search).get("f");
+        if (getContentF === null || getContentF === "") {
+            if (findMapping(path) === undefined) {
+                alert(path + '\n这个页面不见了╮(￣▽￣")╭');
+                window.location.href = "/index.html";
+            }
+        } else {
+            // 将getContentF进行URL解码
+            getContentF = decodeURIComponent(getContentF);
+            alert(getContentF);
+            // 回退至用户上一个页面
+            window.history.back();
+        }
+
+        /**
+         * @description 映射
+         * @param {string} url - 要映射的URL
+         * @return {*}
+         */
+        function findMapping(path) {
+            // pid => old/pid
+            if (path.match(/^(\/pid\/)/g)) {
+                window.location.href = url.replace("/pid/", "/old/pid/");
+            }
+            return undefined;
+        }
     </script>
 </html>
