bug fix: fanzhuanzijie页面显示问题

--- a/madebyai/fanzhuanzijie/index.html
+++ b/madebyai/fanzhuanzijie/index.html
@@ -41,10 +41,10 @@
             <!-- 内容区卡片 -->
             <div class="cards-container">
                 <div class="card" style="height: auto; margin-bottom: 20px">
-                    <b style="font-size: 1.7em; display: inline-flex">32位十六进制值字节反转工具</b>
+                    <b style="font-size: 1.7em; display: inline-flex; text-align: center">32位十六进制值字节反转工具</b>
                     <br />
-                    <div>支持比特反转、字节反转和多种输出格式</div>
-                    <div>Made by&nbsp<a href="https://chat.deepseek.com/">DeepSeek-R1</a>; Transplanted by RISINGSUN517</div>
+                    <div style="text-align: center">支持比特反转、字节反转和多种输出格式</div>
+                    <div style="text-align: center">Made by&nbsp<a href="https://chat.deepseek.com/">DeepSeek-R1</a>; Transplanted by RISINGSUN517</div>
                     <br />
                     <div class="description">
                         <p>此工具用于解决红外协议中的字节顺序问题。当您发送类似<code>0xB54AFF00</code>的值但需要输出<code>0x00FF52AD</code>时，可以使用此工具进行灵活转换。</p>
@@ -85,8 +85,7 @@
                             </div>
 
                             <div class="option-group">
-                                <div class="option-title"><i class="bx bx-code-alt"></i> 输出格式</div>
-
+                                <div class="option-title"><i class="bx bx-code-alt"></i>输出格式</div>
                                 <div class="toggle-switch">
                                     <label class="switch">
                                         <input type="checkbox" id="prefixOption" checked />
@@ -239,7 +238,7 @@
                         </div>
                     </div>
 
-                    <div class="control-panel">
+                    <div class="control-panel" style="text-align: center">
                         <div class="step">
                             <div class="step-content"><strong>1.原始值:</strong> 0xB54AFF00</div>
                         </div>
