--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
             <!-- 内容区卡片 -->
             <div class="cards-container">
                 <div class="card">
+                    <b>该域名使用Cloudflare托管</b>
+                    <i>可能有亿点点卡顿</i>
+                </div>
+                <div class="card">
+                    <b style="margin-bottom: 5px">史山是如何诞生的？</b>
+                    <button class="hollow" onclick="window.open(`https:\/\/github.com\/rs9c\/rs9c.github.io`)" style="width: 130px"><i class="bx bxl-github"></i>前去围观&nbsp<i class="bx bxs-plane-take-off"></i></button>
+                </div>
+                <div class="card">
                     <div style="font-weight: 700">验证产品识别码<i class="bx bx-qr"></i>(RSPID)</div>
                     <div style="margin-bottom: 5px">[旧版页面]</div>
                     <button class="solid" onclick="window.open('/old/pid/index.html')">前往<i class="bx bxs-plane-take-off"></i></button>
@@ -51,7 +59,7 @@
                 <div class="card">
                     <div style="font-weight: 700">旧版主页</div>
                     <div style="font-size: 12px; margin-bottom: 5px; display: block">如果你<s style="font-size: 12px"> 想看我曾经写过的屎 </s>是一个恋旧的人，可以点击前去旧页面。</div>
-                    <button class="solid" onclick="window.open('/old/index.html')">前往<i class="bx bxs-plane-take-off" style="color: #ffffff"></i></button>
+                    <button class="solid" onclick="window.open('/old/index.html')">前往<i class="bx bxs-plane-take-off"></i></button>
                 </div>
                 <div class="card">
                     <b>页面问题反馈</b>
