--- a/madebyai/fanzhuanzijie/index.html
+++ b/madebyai/fanzhuanzijie/index.html
@@ -44,7 +44,7 @@
                     <b style="font-size: 1.7em; display: inline-flex; text-align: center">32位十六进制值字节反转工具</b>
                     <br />
                     <div style="text-align: center">支持比特反转、字节反转和多种输出格式</div>
-                    <div style="text-align: center">Made by&nbsp<a href="https://chat.deepseek.com/">DeepSeek-R1</a>; Transplanted by RISINGSUN517</div>
+                    <div style="text-align: center">Made by&nbsp<a href="https://www.deepseek.com/" target="_blank">DeepSeek-R1</a>; Transplanted by RISINGSUN517</div>
                     <br />
                     <div class="description">
                         <p>此工具用于解决红外协议中的字节顺序问题。当您发送类似<code>0xB54AFF00</code>的值但需要输出<code>0x00FF52AD</code>时，可以使用此工具进行灵活转换。</p>
