--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div id="top"></div>
             <!-- 内容区卡片 -->
             <div class="cards-container">
-                <div class="card">
+                <!-- <div class="card">
                     <b>该域名使用Cloudflare托管</b>
                     <i>可能有亿点点卡顿</i>
-                </div>
+                </div> -->
                 <div class="card">
                     <b style="margin-bottom: 5px">史山是如何诞生的？</b>
                     <button class="hollow" onclick="window.open(`https:\/\/github.com\/rs9c\/rs9c.github.io`)" style="width: 130px"><i class="bx bxl-github"></i>前去围观&nbsp<i class="bx bxs-plane-take-off"></i></button>
