--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
                 </div>
                 <div class="card">
                     <b>页面问题反馈</b>
-                    <code style="font-weight: bold">feedback@rsdev.dpdns.org</code>
                     <div class="button-container">
-                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈<i class="bx bx-envelope"></i></button>
+                        <button class="solid" onclick="window.location.href = 'https://github.com/rs9c/rs9c.github.io/issues'">反馈<i class="bx bx-envelope"></i></button>
                     </div>
                 </div>
             </div>
