--- a/example/index.html
+++ b/example/index.html
@@ -99,9 +99,8 @@
                 <div class="card" style="font-family: 'XBC'">RISINGSUN BoringClub 2018</div>
                 <div class="card">
                     <b>问题反馈</b>
-                    <code style="font-weight: bold">feedback@rsdev.dpdns.org</code>
                     <div class="button-container">
-                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈<i class="bx bx-envelope" style="color: #ffffff"></i></button>
+                        <button class="solid" onclick="window.location.href = 'https://github.com/rs9c/rs9c.github.io/issues'">反馈<i class="bx bx-envelope" style="color: #ffffff"></i></button>
                     </div>
                 </div>
             </div>
