--- a/example/index.html
+++ b/example/index.html
@@ -95,8 +95,11 @@
                 <div class="card"><s style="font-family: 'JetBrainsMono'; font-weight: bold">Hello World!</s></div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-style: italic">Hello World!</div>
                 <div class="card"><u style="font-family: 'JetBrainsMono'; font-style: italic; font-weight: bold">Hello World!</u></div>
-                <div class="card" style="font-family: 'RSLOGO'; font-size: 25px">RISINGSUN GROUP 2015</div>
-                <div class="card" style="font-family: 'XBC'">RISINGSUN BoringClub 2018</div>
+                <div class="card" style="font-family: 'RSLOGO'; font-size: 25px">s RISINGSUN 2015</div>
+                <div class="card" style="font-family: 'XBC'; flex-direction: row">
+                    <div style="font-family: 'RSLOGO'; font-size: 25px">b&nbsp</div>
+                    BoringClub 2018
+                </div>
                 <div class="card">
                     <b>问题反馈</b>
                     <div class="button-container">
